int128 repo's idea included